<resources>
    <string name="app_name">UI Task</string>
    <string name="text1">자유톡</string>
    <string name="text2">안녕 나 응애</string>
    <string name="text3">165cm</string>
    <string name="text4">. 53kg</string>
    <string name="text5">1일전</string>
    <string name="text6">팔로우</string>
    <string name="text7">지난 월요일에 했던 이벤트 중 가장 괜찮은 상품 뭐야?</string>
    <string name="text8">지난 월요일에 2023년 S/S 트렌드 말아보기 이벤트 참석했던 혹시 어떤 상품이 제일 괜찮았어?</string>
    <string name="text9">후기 올라오는거 보면 로우라이즈? 그게 제일 반응 좋고 그 테이블이 제일 재밌었다던데 맞아???</string>
    <string name="text10">올해 로우라이즈가 트렌드라길래 나도 도전해보고 싶은데 알라이가 아닌 사람들도 잘 어울릴지 너무너무 궁금해로우라이즈 테이블에 믿었던들 있으면 어땠는지 후기 좀 공유해주라!</string>
    <string name="text11">#2023</string>
    <string name="text12">#TODAYISMONDAY</string>
    <string name="top">#TOP</string>
    <string name="pops">#POPS!</string>
    <string name="wow">#WOW</string>
    <string name="row">#ROW</string>
    <string name="text13">댓글을 남겨주세요.</string>
    <string name="text14">등록</string>
</resources>